Proyecto1/Gramatica/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> funciones
Rule 2     funciones -> funciones funcion
Rule 3     funciones -> funcion
Rule 4     funcion -> FN ID PIZQ lista_parametros PDER bloque
Rule 5     funcion -> FN ID PIZQ PDER bloque
Rule 6     lista_parametros -> lista_parametros COMA parametroo
Rule 7     lista_parametros -> parametroo
Rule 8     parametroo -> ID DOBLEPT tipo
Rule 9     bloque -> LLAIZQ instrucciones LLADER
Rule 10    bloque -> LLAIZQ LLADER
Rule 11    instrucciones -> instrucciones instruccion
Rule 12    instrucciones -> instruccion
Rule 13    instruccion -> llamada PTCOMA
Rule 14    instruccion -> variables PTCOMA
Rule 15    instruccion -> print_instruccion PTCOMA
Rule 16    llamada -> ID PIZQ lista_expresiones PDER
Rule 17    llamada -> ID PIZQ PDER
Rule 18    lista_expresiones -> lista_expresiones COMA expression
Rule 19    lista_expresiones -> expression
Rule 20    variables -> LET MUT ID DOBLEPT tipo IGUAL expression
Rule 21    variables -> LET ID DOBLEPT tipo IGUAL expression
Rule 22    variables -> LET MUT ID IGUAL expression
Rule 23    variables -> LET ID IGUAL expression
Rule 24    variables -> ID IGUAL expression
Rule 25    tipo -> INT
Rule 26    tipo -> FLOAT
Rule 27    tipo -> STR1
Rule 28    tipo -> STR2
Rule 29    tipo -> BOOLEA
Rule 30    tipo -> CHAR
Rule 31    print_instruccion -> PRINT NOT PIZQ expression PDER
Rule 32    expression -> expression OR expression
Rule 33    expression -> expression AND expression
Rule 34    expression -> NOT expression
Rule 35    expression -> expression MENOR expression
Rule 36    expression -> expression MAYOR expression
Rule 37    expression -> expression MAYORIGUAL expression
Rule 38    expression -> expression MENORIGUAL expression
Rule 39    expression -> expression DIFERENTE expression
Rule 40    expression -> expression IGUALIGUAL expression
Rule 41    expression -> MENOS expression
Rule 42    expression -> expression MAS expression
Rule 43    expression -> expression MENOS expression
Rule 44    expression -> expression MULTIPLICACION expression
Rule 45    expression -> expression DIVISION expression
Rule 46    expression -> PIZQ expression PDER
Rule 47    expression -> expression MODULO expression
Rule 48    expression -> INT DOBLEPT DOBLEPT POW PIZQ expression COMA expression PDER
Rule 49    expression -> FLOAT DOBLEPT DOBLEPT POWF PIZQ expression COMA expression PDER
Rule 50    expression -> expression PT BUFER1 PIZQ PDER
Rule 51    expression -> expression PT BUFER2 PIZQ PDER
Rule 52    expression -> llamada
Rule 53    expression -> ENTERO
Rule 54    expression -> DECIMAL
Rule 55    expression -> ID
Rule 56    expression -> CADENA
Rule 57    expression -> CHAR
Rule 58    expression -> TRUE
Rule 59    expression -> FALSE

Terminals, with rules where they appear

AND                  : 33
BOOLEA               : 29
BUFER1               : 50
BUFER2               : 51
CADENA               : 56
CHAR                 : 30 57
COMA                 : 6 18 48 49
DECIMAL              : 54
DIFERENTE            : 39
DIVISION             : 45
DOBLEPT              : 8 20 21 48 48 49 49
ENTERO               : 53
FALSE                : 59
FLOAT                : 26 49
FN                   : 4 5
ID                   : 4 5 8 16 17 20 21 22 23 24 55
IGUAL                : 20 21 22 23 24
IGUALIGUAL           : 40
INT                  : 25 48
LET                  : 20 21 22 23
LLADER               : 9 10
LLAIZQ               : 9 10
MAS                  : 42
MAYOR                : 36
MAYORIGUAL           : 37
MENOR                : 35
MENORIGUAL           : 38
MENOS                : 41 43
MODULO               : 47
MULTIPLICACION       : 44
MUT                  : 20 22
NOT                  : 31 34
OR                   : 32
PDER                 : 4 5 16 17 31 46 48 49 50 51
PIZQ                 : 4 5 16 17 31 46 48 49 50 51
POW                  : 48
POWF                 : 49
PRINT                : 31
PT                   : 50 51
PTCOMA               : 13 14 15
STR1                 : 27
STR2                 : 28
TRUE                 : 58
error                : 

Nonterminals, with rules where they appear

bloque               : 4 5
expression           : 18 19 20 21 22 23 24 31 32 32 33 33 34 35 35 36 36 37 37 38 38 39 39 40 40 41 42 42 43 43 44 44 45 45 46 47 47 48 48 49 49 50 51
funcion              : 2 3
funciones            : 1 2
init                 : 0
instruccion          : 11 12
instrucciones        : 9 11
lista_expresiones    : 16 18
lista_parametros     : 4 6
llamada              : 13 52
parametroo           : 6 7
print_instruccion    : 15
tipo                 : 8 20 21
variables            : 14

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . funciones
    (2) funciones -> . funciones funcion
    (3) funciones -> . funcion
    (4) funcion -> . FN ID PIZQ lista_parametros PDER bloque
    (5) funcion -> . FN ID PIZQ PDER bloque

    FN              shift and go to state 4

    init                           shift and go to state 1
    funciones                      shift and go to state 2
    funcion                        shift and go to state 3

state 1

    (0) S' -> init .



state 2

    (1) init -> funciones .
    (2) funciones -> funciones . funcion
    (4) funcion -> . FN ID PIZQ lista_parametros PDER bloque
    (5) funcion -> . FN ID PIZQ PDER bloque

    $end            reduce using rule 1 (init -> funciones .)
    FN              shift and go to state 4

    funcion                        shift and go to state 5

state 3

    (3) funciones -> funcion .

    FN              reduce using rule 3 (funciones -> funcion .)
    $end            reduce using rule 3 (funciones -> funcion .)


state 4

    (4) funcion -> FN . ID PIZQ lista_parametros PDER bloque
    (5) funcion -> FN . ID PIZQ PDER bloque

    ID              shift and go to state 6


state 5

    (2) funciones -> funciones funcion .

    FN              reduce using rule 2 (funciones -> funciones funcion .)
    $end            reduce using rule 2 (funciones -> funciones funcion .)


state 6

    (4) funcion -> FN ID . PIZQ lista_parametros PDER bloque
    (5) funcion -> FN ID . PIZQ PDER bloque

    PIZQ            shift and go to state 7


state 7

    (4) funcion -> FN ID PIZQ . lista_parametros PDER bloque
    (5) funcion -> FN ID PIZQ . PDER bloque
    (6) lista_parametros -> . lista_parametros COMA parametroo
    (7) lista_parametros -> . parametroo
    (8) parametroo -> . ID DOBLEPT tipo

    PDER            shift and go to state 10
    ID              shift and go to state 8

    lista_parametros               shift and go to state 9
    parametroo                     shift and go to state 11

state 8

    (8) parametroo -> ID . DOBLEPT tipo

    DOBLEPT         shift and go to state 12


state 9

    (4) funcion -> FN ID PIZQ lista_parametros . PDER bloque
    (6) lista_parametros -> lista_parametros . COMA parametroo

    PDER            shift and go to state 13
    COMA            shift and go to state 14


state 10

    (5) funcion -> FN ID PIZQ PDER . bloque
    (9) bloque -> . LLAIZQ instrucciones LLADER
    (10) bloque -> . LLAIZQ LLADER

    LLAIZQ          shift and go to state 16

    bloque                         shift and go to state 15

state 11

    (7) lista_parametros -> parametroo .

    PDER            reduce using rule 7 (lista_parametros -> parametroo .)
    COMA            reduce using rule 7 (lista_parametros -> parametroo .)


state 12

    (8) parametroo -> ID DOBLEPT . tipo
    (25) tipo -> . INT
    (26) tipo -> . FLOAT
    (27) tipo -> . STR1
    (28) tipo -> . STR2
    (29) tipo -> . BOOLEA
    (30) tipo -> . CHAR

    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    STR1            shift and go to state 20
    STR2            shift and go to state 21
    BOOLEA          shift and go to state 22
    CHAR            shift and go to state 23

    tipo                           shift and go to state 17

state 13

    (4) funcion -> FN ID PIZQ lista_parametros PDER . bloque
    (9) bloque -> . LLAIZQ instrucciones LLADER
    (10) bloque -> . LLAIZQ LLADER

    LLAIZQ          shift and go to state 16

    bloque                         shift and go to state 24

state 14

    (6) lista_parametros -> lista_parametros COMA . parametroo
    (8) parametroo -> . ID DOBLEPT tipo

    ID              shift and go to state 8

    parametroo                     shift and go to state 25

state 15

    (5) funcion -> FN ID PIZQ PDER bloque .

    FN              reduce using rule 5 (funcion -> FN ID PIZQ PDER bloque .)
    $end            reduce using rule 5 (funcion -> FN ID PIZQ PDER bloque .)


state 16

    (9) bloque -> LLAIZQ . instrucciones LLADER
    (10) bloque -> LLAIZQ . LLADER
    (11) instrucciones -> . instrucciones instruccion
    (12) instrucciones -> . instruccion
    (13) instruccion -> . llamada PTCOMA
    (14) instruccion -> . variables PTCOMA
    (15) instruccion -> . print_instruccion PTCOMA
    (16) llamada -> . ID PIZQ lista_expresiones PDER
    (17) llamada -> . ID PIZQ PDER
    (20) variables -> . LET MUT ID DOBLEPT tipo IGUAL expression
    (21) variables -> . LET ID DOBLEPT tipo IGUAL expression
    (22) variables -> . LET MUT ID IGUAL expression
    (23) variables -> . LET ID IGUAL expression
    (24) variables -> . ID IGUAL expression
    (31) print_instruccion -> . PRINT NOT PIZQ expression PDER

    LLADER          shift and go to state 27
    ID              shift and go to state 32
    LET             shift and go to state 33
    PRINT           shift and go to state 34

    instrucciones                  shift and go to state 26
    instruccion                    shift and go to state 28
    llamada                        shift and go to state 29
    variables                      shift and go to state 30
    print_instruccion              shift and go to state 31

state 17

    (8) parametroo -> ID DOBLEPT tipo .

    PDER            reduce using rule 8 (parametroo -> ID DOBLEPT tipo .)
    COMA            reduce using rule 8 (parametroo -> ID DOBLEPT tipo .)


state 18

    (25) tipo -> INT .

    PDER            reduce using rule 25 (tipo -> INT .)
    COMA            reduce using rule 25 (tipo -> INT .)
    IGUAL           reduce using rule 25 (tipo -> INT .)


state 19

    (26) tipo -> FLOAT .

    PDER            reduce using rule 26 (tipo -> FLOAT .)
    COMA            reduce using rule 26 (tipo -> FLOAT .)
    IGUAL           reduce using rule 26 (tipo -> FLOAT .)


state 20

    (27) tipo -> STR1 .

    PDER            reduce using rule 27 (tipo -> STR1 .)
    COMA            reduce using rule 27 (tipo -> STR1 .)
    IGUAL           reduce using rule 27 (tipo -> STR1 .)


state 21

    (28) tipo -> STR2 .

    PDER            reduce using rule 28 (tipo -> STR2 .)
    COMA            reduce using rule 28 (tipo -> STR2 .)
    IGUAL           reduce using rule 28 (tipo -> STR2 .)


state 22

    (29) tipo -> BOOLEA .

    PDER            reduce using rule 29 (tipo -> BOOLEA .)
    COMA            reduce using rule 29 (tipo -> BOOLEA .)
    IGUAL           reduce using rule 29 (tipo -> BOOLEA .)


state 23

    (30) tipo -> CHAR .

    PDER            reduce using rule 30 (tipo -> CHAR .)
    COMA            reduce using rule 30 (tipo -> CHAR .)
    IGUAL           reduce using rule 30 (tipo -> CHAR .)


state 24

    (4) funcion -> FN ID PIZQ lista_parametros PDER bloque .

    FN              reduce using rule 4 (funcion -> FN ID PIZQ lista_parametros PDER bloque .)
    $end            reduce using rule 4 (funcion -> FN ID PIZQ lista_parametros PDER bloque .)


state 25

    (6) lista_parametros -> lista_parametros COMA parametroo .

    PDER            reduce using rule 6 (lista_parametros -> lista_parametros COMA parametroo .)
    COMA            reduce using rule 6 (lista_parametros -> lista_parametros COMA parametroo .)


state 26

    (9) bloque -> LLAIZQ instrucciones . LLADER
    (11) instrucciones -> instrucciones . instruccion
    (13) instruccion -> . llamada PTCOMA
    (14) instruccion -> . variables PTCOMA
    (15) instruccion -> . print_instruccion PTCOMA
    (16) llamada -> . ID PIZQ lista_expresiones PDER
    (17) llamada -> . ID PIZQ PDER
    (20) variables -> . LET MUT ID DOBLEPT tipo IGUAL expression
    (21) variables -> . LET ID DOBLEPT tipo IGUAL expression
    (22) variables -> . LET MUT ID IGUAL expression
    (23) variables -> . LET ID IGUAL expression
    (24) variables -> . ID IGUAL expression
    (31) print_instruccion -> . PRINT NOT PIZQ expression PDER

    LLADER          shift and go to state 35
    ID              shift and go to state 32
    LET             shift and go to state 33
    PRINT           shift and go to state 34

    instruccion                    shift and go to state 36
    llamada                        shift and go to state 29
    variables                      shift and go to state 30
    print_instruccion              shift and go to state 31

state 27

    (10) bloque -> LLAIZQ LLADER .

    FN              reduce using rule 10 (bloque -> LLAIZQ LLADER .)
    $end            reduce using rule 10 (bloque -> LLAIZQ LLADER .)


state 28

    (12) instrucciones -> instruccion .

    LLADER          reduce using rule 12 (instrucciones -> instruccion .)
    ID              reduce using rule 12 (instrucciones -> instruccion .)
    LET             reduce using rule 12 (instrucciones -> instruccion .)
    PRINT           reduce using rule 12 (instrucciones -> instruccion .)


state 29

    (13) instruccion -> llamada . PTCOMA

    PTCOMA          shift and go to state 37


state 30

    (14) instruccion -> variables . PTCOMA

    PTCOMA          shift and go to state 38


state 31

    (15) instruccion -> print_instruccion . PTCOMA

    PTCOMA          shift and go to state 39


state 32

    (16) llamada -> ID . PIZQ lista_expresiones PDER
    (17) llamada -> ID . PIZQ PDER
    (24) variables -> ID . IGUAL expression

    PIZQ            shift and go to state 40
    IGUAL           shift and go to state 41


state 33

    (20) variables -> LET . MUT ID DOBLEPT tipo IGUAL expression
    (21) variables -> LET . ID DOBLEPT tipo IGUAL expression
    (22) variables -> LET . MUT ID IGUAL expression
    (23) variables -> LET . ID IGUAL expression

    MUT             shift and go to state 42
    ID              shift and go to state 43


state 34

    (31) print_instruccion -> PRINT . NOT PIZQ expression PDER

    NOT             shift and go to state 44


state 35

    (9) bloque -> LLAIZQ instrucciones LLADER .

    FN              reduce using rule 9 (bloque -> LLAIZQ instrucciones LLADER .)
    $end            reduce using rule 9 (bloque -> LLAIZQ instrucciones LLADER .)


state 36

    (11) instrucciones -> instrucciones instruccion .

    LLADER          reduce using rule 11 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 11 (instrucciones -> instrucciones instruccion .)
    LET             reduce using rule 11 (instrucciones -> instrucciones instruccion .)
    PRINT           reduce using rule 11 (instrucciones -> instrucciones instruccion .)


state 37

    (13) instruccion -> llamada PTCOMA .

    LLADER          reduce using rule 13 (instruccion -> llamada PTCOMA .)
    ID              reduce using rule 13 (instruccion -> llamada PTCOMA .)
    LET             reduce using rule 13 (instruccion -> llamada PTCOMA .)
    PRINT           reduce using rule 13 (instruccion -> llamada PTCOMA .)


state 38

    (14) instruccion -> variables PTCOMA .

    LLADER          reduce using rule 14 (instruccion -> variables PTCOMA .)
    ID              reduce using rule 14 (instruccion -> variables PTCOMA .)
    LET             reduce using rule 14 (instruccion -> variables PTCOMA .)
    PRINT           reduce using rule 14 (instruccion -> variables PTCOMA .)


state 39

    (15) instruccion -> print_instruccion PTCOMA .

    LLADER          reduce using rule 15 (instruccion -> print_instruccion PTCOMA .)
    ID              reduce using rule 15 (instruccion -> print_instruccion PTCOMA .)
    LET             reduce using rule 15 (instruccion -> print_instruccion PTCOMA .)
    PRINT           reduce using rule 15 (instruccion -> print_instruccion PTCOMA .)


state 40

    (16) llamada -> ID PIZQ . lista_expresiones PDER
    (17) llamada -> ID PIZQ . PDER
    (18) lista_expresiones -> . lista_expresiones COMA expression
    (19) lista_expresiones -> . expression
    (32) expression -> . expression OR expression
    (33) expression -> . expression AND expression
    (34) expression -> . NOT expression
    (35) expression -> . expression MENOR expression
    (36) expression -> . expression MAYOR expression
    (37) expression -> . expression MAYORIGUAL expression
    (38) expression -> . expression MENORIGUAL expression
    (39) expression -> . expression DIFERENTE expression
    (40) expression -> . expression IGUALIGUAL expression
    (41) expression -> . MENOS expression
    (42) expression -> . expression MAS expression
    (43) expression -> . expression MENOS expression
    (44) expression -> . expression MULTIPLICACION expression
    (45) expression -> . expression DIVISION expression
    (46) expression -> . PIZQ expression PDER
    (47) expression -> . expression MODULO expression
    (48) expression -> . INT DOBLEPT DOBLEPT POW PIZQ expression COMA expression PDER
    (49) expression -> . FLOAT DOBLEPT DOBLEPT POWF PIZQ expression COMA expression PDER
    (50) expression -> . expression PT BUFER1 PIZQ PDER
    (51) expression -> . expression PT BUFER2 PIZQ PDER
    (52) expression -> . llamada
    (53) expression -> . ENTERO
    (54) expression -> . DECIMAL
    (55) expression -> . ID
    (56) expression -> . CADENA
    (57) expression -> . CHAR
    (58) expression -> . TRUE
    (59) expression -> . FALSE
    (16) llamada -> . ID PIZQ lista_expresiones PDER
    (17) llamada -> . ID PIZQ PDER

    PDER            shift and go to state 48
    NOT             shift and go to state 50
    MENOS           shift and go to state 51
    PIZQ            shift and go to state 46
    INT             shift and go to state 52
    FLOAT           shift and go to state 53
    ENTERO          shift and go to state 55
    DECIMAL         shift and go to state 56
    ID              shift and go to state 45
    CADENA          shift and go to state 57
    CHAR            shift and go to state 58
    TRUE            shift and go to state 59
    FALSE           shift and go to state 60

    lista_expresiones              shift and go to state 47
    expression                     shift and go to state 49
    llamada                        shift and go to state 54

state 41

    (24) variables -> ID IGUAL . expression
    (32) expression -> . expression OR expression
    (33) expression -> . expression AND expression
    (34) expression -> . NOT expression
    (35) expression -> . expression MENOR expression
    (36) expression -> . expression MAYOR expression
    (37) expression -> . expression MAYORIGUAL expression
    (38) expression -> . expression MENORIGUAL expression
    (39) expression -> . expression DIFERENTE expression
    (40) expression -> . expression IGUALIGUAL expression
    (41) expression -> . MENOS expression
    (42) expression -> . expression MAS expression
    (43) expression -> . expression MENOS expression
    (44) expression -> . expression MULTIPLICACION expression
    (45) expression -> . expression DIVISION expression
    (46) expression -> . PIZQ expression PDER
    (47) expression -> . expression MODULO expression
    (48) expression -> . INT DOBLEPT DOBLEPT POW PIZQ expression COMA expression PDER
    (49) expression -> . FLOAT DOBLEPT DOBLEPT POWF PIZQ expression COMA expression PDER
    (50) expression -> . expression PT BUFER1 PIZQ PDER
    (51) expression -> . expression PT BUFER2 PIZQ PDER
    (52) expression -> . llamada
    (53) expression -> . ENTERO
    (54) expression -> . DECIMAL
    (55) expression -> . ID
    (56) expression -> . CADENA
    (57) expression -> . CHAR
    (58) expression -> . TRUE
    (59) expression -> . FALSE
    (16) llamada -> . ID PIZQ lista_expresiones PDER
    (17) llamada -> . ID PIZQ PDER

    NOT             shift and go to state 50
    MENOS           shift and go to state 51
    PIZQ            shift and go to state 46
    INT             shift and go to state 52
    FLOAT           shift and go to state 53
    ENTERO          shift and go to state 55
    DECIMAL         shift and go to state 56
    ID              shift and go to state 45
    CADENA          shift and go to state 57
    CHAR            shift and go to state 58
    TRUE            shift and go to state 59
    FALSE           shift and go to state 60

    expression                     shift and go to state 61
    llamada                        shift and go to state 54

state 42

    (20) variables -> LET MUT . ID DOBLEPT tipo IGUAL expression
    (22) variables -> LET MUT . ID IGUAL expression

    ID              shift and go to state 62


state 43

    (21) variables -> LET ID . DOBLEPT tipo IGUAL expression
    (23) variables -> LET ID . IGUAL expression

    DOBLEPT         shift and go to state 63
    IGUAL           shift and go to state 64


state 44

    (31) print_instruccion -> PRINT NOT . PIZQ expression PDER

    PIZQ            shift and go to state 65


state 45

    (55) expression -> ID .
    (16) llamada -> ID . PIZQ lista_expresiones PDER
    (17) llamada -> ID . PIZQ PDER

    OR              reduce using rule 55 (expression -> ID .)
    AND             reduce using rule 55 (expression -> ID .)
    MENOR           reduce using rule 55 (expression -> ID .)
    MAYOR           reduce using rule 55 (expression -> ID .)
    MAYORIGUAL      reduce using rule 55 (expression -> ID .)
    MENORIGUAL      reduce using rule 55 (expression -> ID .)
    DIFERENTE       reduce using rule 55 (expression -> ID .)
    IGUALIGUAL      reduce using rule 55 (expression -> ID .)
    MAS             reduce using rule 55 (expression -> ID .)
    MENOS           reduce using rule 55 (expression -> ID .)
    MULTIPLICACION  reduce using rule 55 (expression -> ID .)
    DIVISION        reduce using rule 55 (expression -> ID .)
    MODULO          reduce using rule 55 (expression -> ID .)
    PT              reduce using rule 55 (expression -> ID .)
    PDER            reduce using rule 55 (expression -> ID .)
    COMA            reduce using rule 55 (expression -> ID .)
    PTCOMA          reduce using rule 55 (expression -> ID .)
    PIZQ            shift and go to state 40


state 46

    (46) expression -> PIZQ . expression PDER
    (32) expression -> . expression OR expression
    (33) expression -> . expression AND expression
    (34) expression -> . NOT expression
    (35) expression -> . expression MENOR expression
    (36) expression -> . expression MAYOR expression
    (37) expression -> . expression MAYORIGUAL expression
    (38) expression -> . expression MENORIGUAL expression
    (39) expression -> . expression DIFERENTE expression
    (40) expression -> . expression IGUALIGUAL expression
    (41) expression -> . MENOS expression
    (42) expression -> . expression MAS expression
    (43) expression -> . expression MENOS expression
    (44) expression -> . expression MULTIPLICACION expression
    (45) expression -> . expression DIVISION expression
    (46) expression -> . PIZQ expression PDER
    (47) expression -> . expression MODULO expression
    (48) expression -> . INT DOBLEPT DOBLEPT POW PIZQ expression COMA expression PDER
    (49) expression -> . FLOAT DOBLEPT DOBLEPT POWF PIZQ expression COMA expression PDER
    (50) expression -> . expression PT BUFER1 PIZQ PDER
    (51) expression -> . expression PT BUFER2 PIZQ PDER
    (52) expression -> . llamada
    (53) expression -> . ENTERO
    (54) expression -> . DECIMAL
    (55) expression -> . ID
    (56) expression -> . CADENA
    (57) expression -> . CHAR
    (58) expression -> . TRUE
    (59) expression -> . FALSE
    (16) llamada -> . ID PIZQ lista_expresiones PDER
    (17) llamada -> . ID PIZQ PDER

    NOT             shift and go to state 50
    MENOS           shift and go to state 51
    PIZQ            shift and go to state 46
    INT             shift and go to state 52
    FLOAT           shift and go to state 53
    ENTERO          shift and go to state 55
    DECIMAL         shift and go to state 56
    ID              shift and go to state 45
    CADENA          shift and go to state 57
    CHAR            shift and go to state 58
    TRUE            shift and go to state 59
    FALSE           shift and go to state 60

    expression                     shift and go to state 66
    llamada                        shift and go to state 54

state 47

    (16) llamada -> ID PIZQ lista_expresiones . PDER
    (18) lista_expresiones -> lista_expresiones . COMA expression

    PDER            shift and go to state 67
    COMA            shift and go to state 68


state 48

    (17) llamada -> ID PIZQ PDER .

    PTCOMA          reduce using rule 17 (llamada -> ID PIZQ PDER .)
    OR              reduce using rule 17 (llamada -> ID PIZQ PDER .)
    AND             reduce using rule 17 (llamada -> ID PIZQ PDER .)
    MENOR           reduce using rule 17 (llamada -> ID PIZQ PDER .)
    MAYOR           reduce using rule 17 (llamada -> ID PIZQ PDER .)
    MAYORIGUAL      reduce using rule 17 (llamada -> ID PIZQ PDER .)
    MENORIGUAL      reduce using rule 17 (llamada -> ID PIZQ PDER .)
    DIFERENTE       reduce using rule 17 (llamada -> ID PIZQ PDER .)
    IGUALIGUAL      reduce using rule 17 (llamada -> ID PIZQ PDER .)
    MAS             reduce using rule 17 (llamada -> ID PIZQ PDER .)
    MENOS           reduce using rule 17 (llamada -> ID PIZQ PDER .)
    MULTIPLICACION  reduce using rule 17 (llamada -> ID PIZQ PDER .)
    DIVISION        reduce using rule 17 (llamada -> ID PIZQ PDER .)
    MODULO          reduce using rule 17 (llamada -> ID PIZQ PDER .)
    PT              reduce using rule 17 (llamada -> ID PIZQ PDER .)
    PDER            reduce using rule 17 (llamada -> ID PIZQ PDER .)
    COMA            reduce using rule 17 (llamada -> ID PIZQ PDER .)


state 49

    (19) lista_expresiones -> expression .
    (32) expression -> expression . OR expression
    (33) expression -> expression . AND expression
    (35) expression -> expression . MENOR expression
    (36) expression -> expression . MAYOR expression
    (37) expression -> expression . MAYORIGUAL expression
    (38) expression -> expression . MENORIGUAL expression
    (39) expression -> expression . DIFERENTE expression
    (40) expression -> expression . IGUALIGUAL expression
    (42) expression -> expression . MAS expression
    (43) expression -> expression . MENOS expression
    (44) expression -> expression . MULTIPLICACION expression
    (45) expression -> expression . DIVISION expression
    (47) expression -> expression . MODULO expression
    (50) expression -> expression . PT BUFER1 PIZQ PDER
    (51) expression -> expression . PT BUFER2 PIZQ PDER

    PDER            reduce using rule 19 (lista_expresiones -> expression .)
    COMA            reduce using rule 19 (lista_expresiones -> expression .)
    OR              shift and go to state 69
    AND             shift and go to state 70
    MENOR           shift and go to state 71
    MAYOR           shift and go to state 72
    MAYORIGUAL      shift and go to state 73
    MENORIGUAL      shift and go to state 74
    DIFERENTE       shift and go to state 75
    IGUALIGUAL      shift and go to state 76
    MAS             shift and go to state 77
    MENOS           shift and go to state 78
    MULTIPLICACION  shift and go to state 79
    DIVISION        shift and go to state 80
    MODULO          shift and go to state 81
    PT              shift and go to state 82


state 50

    (34) expression -> NOT . expression
    (32) expression -> . expression OR expression
    (33) expression -> . expression AND expression
    (34) expression -> . NOT expression
    (35) expression -> . expression MENOR expression
    (36) expression -> . expression MAYOR expression
    (37) expression -> . expression MAYORIGUAL expression
    (38) expression -> . expression MENORIGUAL expression
    (39) expression -> . expression DIFERENTE expression
    (40) expression -> . expression IGUALIGUAL expression
    (41) expression -> . MENOS expression
    (42) expression -> . expression MAS expression
    (43) expression -> . expression MENOS expression
    (44) expression -> . expression MULTIPLICACION expression
    (45) expression -> . expression DIVISION expression
    (46) expression -> . PIZQ expression PDER
    (47) expression -> . expression MODULO expression
    (48) expression -> . INT DOBLEPT DOBLEPT POW PIZQ expression COMA expression PDER
    (49) expression -> . FLOAT DOBLEPT DOBLEPT POWF PIZQ expression COMA expression PDER
    (50) expression -> . expression PT BUFER1 PIZQ PDER
    (51) expression -> . expression PT BUFER2 PIZQ PDER
    (52) expression -> . llamada
    (53) expression -> . ENTERO
    (54) expression -> . DECIMAL
    (55) expression -> . ID
    (56) expression -> . CADENA
    (57) expression -> . CHAR
    (58) expression -> . TRUE
    (59) expression -> . FALSE
    (16) llamada -> . ID PIZQ lista_expresiones PDER
    (17) llamada -> . ID PIZQ PDER

    NOT             shift and go to state 50
    MENOS           shift and go to state 51
    PIZQ            shift and go to state 46
    INT             shift and go to state 52
    FLOAT           shift and go to state 53
    ENTERO          shift and go to state 55
    DECIMAL         shift and go to state 56
    ID              shift and go to state 45
    CADENA          shift and go to state 57
    CHAR            shift and go to state 58
    TRUE            shift and go to state 59
    FALSE           shift and go to state 60

    expression                     shift and go to state 83
    llamada                        shift and go to state 54

state 51

    (41) expression -> MENOS . expression
    (32) expression -> . expression OR expression
    (33) expression -> . expression AND expression
    (34) expression -> . NOT expression
    (35) expression -> . expression MENOR expression
    (36) expression -> . expression MAYOR expression
    (37) expression -> . expression MAYORIGUAL expression
    (38) expression -> . expression MENORIGUAL expression
    (39) expression -> . expression DIFERENTE expression
    (40) expression -> . expression IGUALIGUAL expression
    (41) expression -> . MENOS expression
    (42) expression -> . expression MAS expression
    (43) expression -> . expression MENOS expression
    (44) expression -> . expression MULTIPLICACION expression
    (45) expression -> . expression DIVISION expression
    (46) expression -> . PIZQ expression PDER
    (47) expression -> . expression MODULO expression
    (48) expression -> . INT DOBLEPT DOBLEPT POW PIZQ expression COMA expression PDER
    (49) expression -> . FLOAT DOBLEPT DOBLEPT POWF PIZQ expression COMA expression PDER
    (50) expression -> . expression PT BUFER1 PIZQ PDER
    (51) expression -> . expression PT BUFER2 PIZQ PDER
    (52) expression -> . llamada
    (53) expression -> . ENTERO
    (54) expression -> . DECIMAL
    (55) expression -> . ID
    (56) expression -> . CADENA
    (57) expression -> . CHAR
    (58) expression -> . TRUE
    (59) expression -> . FALSE
    (16) llamada -> . ID PIZQ lista_expresiones PDER
    (17) llamada -> . ID PIZQ PDER

    NOT             shift and go to state 50
    MENOS           shift and go to state 51
    PIZQ            shift and go to state 46
    INT             shift and go to state 52
    FLOAT           shift and go to state 53
    ENTERO          shift and go to state 55
    DECIMAL         shift and go to state 56
    ID              shift and go to state 45
    CADENA          shift and go to state 57
    CHAR            shift and go to state 58
    TRUE            shift and go to state 59
    FALSE           shift and go to state 60

    expression                     shift and go to state 84
    llamada                        shift and go to state 54

state 52

    (48) expression -> INT . DOBLEPT DOBLEPT POW PIZQ expression COMA expression PDER

    DOBLEPT         shift and go to state 85


state 53

    (49) expression -> FLOAT . DOBLEPT DOBLEPT POWF PIZQ expression COMA expression PDER

    DOBLEPT         shift and go to state 86


state 54

    (52) expression -> llamada .

    OR              reduce using rule 52 (expression -> llamada .)
    AND             reduce using rule 52 (expression -> llamada .)
    MENOR           reduce using rule 52 (expression -> llamada .)
    MAYOR           reduce using rule 52 (expression -> llamada .)
    MAYORIGUAL      reduce using rule 52 (expression -> llamada .)
    MENORIGUAL      reduce using rule 52 (expression -> llamada .)
    DIFERENTE       reduce using rule 52 (expression -> llamada .)
    IGUALIGUAL      reduce using rule 52 (expression -> llamada .)
    MAS             reduce using rule 52 (expression -> llamada .)
    MENOS           reduce using rule 52 (expression -> llamada .)
    MULTIPLICACION  reduce using rule 52 (expression -> llamada .)
    DIVISION        reduce using rule 52 (expression -> llamada .)
    MODULO          reduce using rule 52 (expression -> llamada .)
    PT              reduce using rule 52 (expression -> llamada .)
    PDER            reduce using rule 52 (expression -> llamada .)
    COMA            reduce using rule 52 (expression -> llamada .)
    PTCOMA          reduce using rule 52 (expression -> llamada .)


state 55

    (53) expression -> ENTERO .

    OR              reduce using rule 53 (expression -> ENTERO .)
    AND             reduce using rule 53 (expression -> ENTERO .)
    MENOR           reduce using rule 53 (expression -> ENTERO .)
    MAYOR           reduce using rule 53 (expression -> ENTERO .)
    MAYORIGUAL      reduce using rule 53 (expression -> ENTERO .)
    MENORIGUAL      reduce using rule 53 (expression -> ENTERO .)
    DIFERENTE       reduce using rule 53 (expression -> ENTERO .)
    IGUALIGUAL      reduce using rule 53 (expression -> ENTERO .)
    MAS             reduce using rule 53 (expression -> ENTERO .)
    MENOS           reduce using rule 53 (expression -> ENTERO .)
    MULTIPLICACION  reduce using rule 53 (expression -> ENTERO .)
    DIVISION        reduce using rule 53 (expression -> ENTERO .)
    MODULO          reduce using rule 53 (expression -> ENTERO .)
    PT              reduce using rule 53 (expression -> ENTERO .)
    PDER            reduce using rule 53 (expression -> ENTERO .)
    COMA            reduce using rule 53 (expression -> ENTERO .)
    PTCOMA          reduce using rule 53 (expression -> ENTERO .)


state 56

    (54) expression -> DECIMAL .
